Refactorings in ModelMapperTest and User